--- a/src/main/resources/org/familybudget/familybudget/category-plan-list-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/category-plan-list-view.fxml
@@ -18,7 +18,7 @@
         <Insets top="20" right="20" bottom="20" left="20"/>
     </padding>
 
-    <!-- Заголовок + плюсик справа -->
+    <!-- Заголовок -->
     <HBox alignment="CENTER_LEFT" spacing="10" prefWidth="560">
         <Label text="Планы по категориям"
                style="-fx-text-fill: #222222;">
@@ -29,7 +29,7 @@
 
         <Region HBox.hgrow="ALWAYS"/>
 
-        <!-- Кнопка добавления (зелёный круг с плюсом) -->
+        <!-- Кнопка добавления-->
         <Button fx:id="onOpenCategoryPlanAddClick"
                 onAction="#onAddClick"
                 style="
@@ -80,7 +80,6 @@
                        -fx-padding: 6 18;
                        -fx-font-size: 12;"/>
 
-        <!-- Растягиваем пространство, чтобы остальные ушли вправо -->
         <Region HBox.hgrow="ALWAYS"/>
 
         <!-- Синяя кнопка РЕДАКТИРОВАТЬ -->
